package td2.forum.v2;

public interface IContenu<T> extends IForumObject {
}
